--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,87 +2,98 @@ cmake_minimum_required(VERSION 3.16)
 
 project(ByteCaveClient VERSION 0.1 LANGUAGES CXX)
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
+# -----------------------------
+# C++ standard
+# -----------------------------
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# -----------------------------
+# Qt auto features
+# -----------------------------
+set(CMAKE_AUTOUIC ON)    # process .ui files automatically
+set(CMAKE_AUTOMOC ON)    # process Q_OBJECT macros
+set(CMAKE_AUTORCC ON)    # process Qt resource files
+
+# -----------------------------
+# Find Qt
+# -----------------------------
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+# -----------------------------
+# Source files
+# -----------------------------
 set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        mainwindow.ui
+    main.cpp
+
+    # Main window
+    mainwindow.h
+    mainwindow.cpp
+    mainwindow.ui
+
+    # Other windows
+    hellowindow.h
+    hellowindow.cpp
+    hellowindow.ui
+
+    chatroomcreation.h
+    chatroomcreation.cpp
+    chatroomcreation.ui
+
+    # Services and structs
+    services/bytecaveclient.h
+    services/bytecaveclient.cpp
+    structs/Chatroom.h
+
+    # Add any other source files here
 )
 
+# -----------------------------
+# Executable
+# -----------------------------
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(ByteCaveClient
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET ByteCaveClient APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
-    if(ANDROID)
-        add_library(ByteCaveClient SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(ByteCaveClient
-            ${PROJECT_SOURCES}
-            interfaces/IByteCaveClient.h
-            services/bytecaveclient.h services/bytecaveclient.cpp
-            hellowindow.h hellowindow.cpp hellowindow.ui
-            chatroomcreation.h chatroomcreation.cpp chatroomcreation.ui
-            structs/Chatroom.h
-
-
-
-        )
-    endif()
+    add_executable(ByteCaveClient
+        ${PROJECT_SOURCES}
+    )
 endif()
 
+# -----------------------------
+# Link Qt libraries
+# -----------------------------
 target_link_libraries(ByteCaveClient PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-# Adding the include directories for the libraries
-target_include_directories(
-    ByteCaveClient
+# -----------------------------
+# Include directories
+# -----------------------------
+target_include_directories(ByteCaveClient
     PRIVATE
     ${CMAKE_SOURCE_DIR}/include/asio
     ${CMAKE_SOURCE_DIR}/interfaces
     ${CMAKE_SOURCE_DIR}/services
     ${CMAKE_SOURCE_DIR}/structs
-    /home/v01d/dev/libs/include/json/include
-)
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
-if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.ByteCaveClient)
-endif()
-set_target_properties(ByteCaveClient PROPERTIES
-    ${BUNDLE_ID_OPTION}
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
+    ${CMAKE_SOURCE_DIR}/Forms
+    /home/v01d/dev/libs/include/json/include  # nlohmann/json
 )
 
+# -----------------------------
+# Finalize Qt executable
+# -----------------------------
+if(QT_VERSION_MAJOR EQUAL 6)
+    qt_finalize_executable(ByteCaveClient)
+endif()
+
+# -----------------------------
+# Optional: install
+# -----------------------------
 include(GNUInstallDirs)
 install(TARGETS ByteCaveClient
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
-
-if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(ByteCaveClient)
-endif()
